syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

// The greeting service definition.
service Greeter {
  // Unary RPC: Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // Server streaming RPC: Server sends multiple greetings
  rpc ServerStreamingHello (HelloRequest) returns (stream HelloReply);

  // Client streaming RPC: Client sends multiple names, server counts them
  rpc ClientStreamingHello (stream HelloRequest) returns (HelloCountReply);

  // Bidirectional streaming RPC: Both client and server exchange messages
  rpc BidirectionalHello (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// Response for client streaming with count
message HelloCountReply {
  int32 count = 1;
  string summary = 2;
}
